indent & mustache organization touch up

--- a/layout/templates/key_stories.mustache
+++ b/layout/templates/key_stories.mustache
@@ -1,54 +1,65 @@
 <div id="wu-story" class="viz-text">
 
-  <h3>How do we use water in the U.S.?</h3>
+  <div id="main-story">
+  
+    <h3>How do we use water in the U.S.?</h3>
   
     <div class="key-story-plot" id="national-pie">
-    <p>
-    The U.S. states and territories used over 322 billion gallons per day in 2015. This amount of water is approximately equal to YY (Some percentage of Lake Erie?). We use water in different ways to serve many economically and culturally important needs. The national breakdown of different water uses is as follows:
-    </p>
+      <p>
+      The U.S. states and territories used over 322 billion gallons per day in 2015. This amount of water is approximately equal to YY (Some percentage of Lake Erie?). We use water in different ways to serve many economically and culturally important needs. The national breakdown of different water uses is as follows:
+      </p>
     </div>
   
-  <div id="fig-caption">
-    <p>
-    Domestic, livestock, aquaculture, and mining compose the "other" category and togther make up 5 percent of total withdrawals.
-    </p>
-  </div>
+    <div id="fig-caption">
+      <p>
+      Domestic, livestock, aquaculture, and mining compose the "other" category and togther make up 5 percent of total withdrawals.
+      </p>
+    </div>
   
     <p>
-    Although thermoelectric and irrigation are the most dominant categories nationally, the county breakdown reveals regional differences in water use distribution. Below is a map that shows all cateogries for each county at one time. While you can still see that irrigation and thermoelectric are the largest, there is a stark contrast between the East, where thermoelectric is dominant, and the West, where irrigation is dominant. See the map below for specific findings:
+      Although thermoelectric and irrigation are the most dominant categories nationally, the county breakdown reveals regional differences in water use distribution. Below is a map that shows all cateogries for each county at one time. While you can still see that irrigation and thermoelectric are the largest, there is a stark contrast between the East, where thermoelectric is dominant, and the West, where irrigation is dominant. See the map below for specific findings:
     </p>
     
     <div class="key-story-plot" id="national-static-pie">
-    <figure>
-     {{{ pie_map_plot }}}
-    </figure>
+      <figure>
+       {{{ pie_map_plot }}}
+      </figure>
     </div>
+    
     <p>
-    As a result of all these spatial differences in how we use water, total water use differs greatly among states. Can you guess where these three states rank in total water use and use?
+      As a result of all these spatial differences in how we use water, total water use differs greatly among states. Can you guess where these three states rank in total water use and use?
     </p>
+    
     <div class="key-story-plot" id="rank-states-interactive"></div>
-    
  
-  <p>
-    Note that not all water "use" is the same - some use is "consumptive" in the sense that it takes water out of the natural cycle by evaporation, <a href="https://water.usgs.gov/edu/watercycletranspiration.html">transpiration</a>, or incorporating into a product, while other uses return the water to rivers or aquifers (possibly after adding heat or contaminants) where it can be withdrawn again for another use. Of the water withdrawn for irrigation, 62 percent is evaporated or transpired by crops and won't re-enter the natural water cycle until the next rainfall, possibly far away from the point of water withdrawal. For thermoelectric power, consumptive use is 3 percent; the rest is returned to rivers or lakes, albeit warmer than before.
+    <p>
+      Note that not all water "use" is the same - some use is "consumptive" in the sense that it takes water out of the natural cycle by evaporation, <a href="https://water.usgs.gov/edu/watercycletranspiration.html">transpiration</a>, or incorporating into a product, while other uses return the water to rivers or aquifers (possibly after adding heat or contaminants) where it can be withdrawn again for another use. Of the water withdrawn for irrigation, 62 percent is evaporated or transpired by crops and won't re-enter the natural water cycle until the next rainfall, possibly far away from the point of water withdrawal. For thermoelectric power, consumptive use is 3 percent; the rest is returned to rivers or lakes, albeit warmer than before.
     </p>
+  </div>
+  
+  <div id="data-collection">
+    <h3>Data Collection</h3>
  
-     <h3>Data Collection</h3>
- 
-<p>
-Every 5 years since 1950, the USGS has compiled and estimated water-use information in cooperation with State, Federal, and local agencies to document how and where we use water. This information is essential to accurately understand how future water demands will be met, while maintaining adequate water quality and quantities for human and ecosystem needs. The fourteenth report in this series, <a href="NEEDLINK!">Estimated Use of Water in the United States in 2015</a>, was released in May of 2018, along with the <a href="NEEDLINK!">county-level data</a> which supports the publication. The <a href="https://www.usgs.gov/water-resources/water-availability-and-use-science-program">USGS Water Availability and Use Science Program</a> hopes to produce higher spatial resolution and more frequent reports in the future. 
- </p>
-    
+    <p>
+      Every 5 years since 1950, the USGS has compiled and estimated water-use information in cooperation with State, Federal, and local agencies to document how and where we use water. This information is essential to accurately understand how future water demands will be met, while maintaining adequate water quality and quantities for human and ecosystem needs. The fourteenth report in this series, <a href="NEEDLINK!">Estimated Use of Water in the United States in 2015</a>, was released in May of 2018, along with the <a href="NEEDLINK!">county-level data</a> which supports the publication. The <a href="https://www.usgs.gov/water-resources/water-availability-and-use-science-program">USGS Water Availability and Use Science Program</a> hopes to produce higher spatial resolution and more frequent reports in the future. 
+     </p>
+  </div>
 
-     <h3>References</h3>
-     
-     <p>
-Dieter, C.A., Maupin, M.A., Caldwell, R.R., Harris, M.A., Ivahnenko, T.I., Lovelace, J.K., Barber, N.L., and Linsey, K.S., 2018, <i>Estimated use of water in the United States in 2015</i>: U.S. Geological Survey Circular 1441, 60? pages, <a href="https://doi.org/xxxx">https://doi.org/xxxx</a>
+  <div id="references">
+    <h3>References</h3>
+    
+    <p>
+      Dieter, C.A., Maupin, M.A., Caldwell, R.R., Harris, M.A., Ivahnenko, T.I., Lovelace, J.K., Barber, N.L., and Linsey, K.S., 2018, <i>Estimated use of water in the United States in 2015</i>: U.S. Geological Survey Circular 1441, 60? pages, <a href="https://doi.org/xxxx">https://doi.org/xxxx</a>
     </p>
-     <p>
-Dieter, C.A., Linsey, K.S., Caldwell, R.R., Harris, M.A., Ivahnenko, T.I., Lovelace, J.K., Maupin, M.A., and Barber, N.L., 2017, <i>Estimated use of water in the United States county-level data for 2015</i>: U.S. Geological Survey data release, <a href="https://doi.org/10.5066/F7TB15V5">https://doi.org/10.5066/F7TB15V5</a>.
+    
+    <p>
+      Dieter, C.A., Linsey, K.S., Caldwell, R.R., Harris, M.A., Ivahnenko, T.I., Lovelace, J.K., Maupin, M.A., and Barber, N.L., 2017, <i>Estimated use of water in the United States county-level data for 2015</i>: U.S. Geological Survey data release, <a href="https://doi.org/10.5066/F7TB15V5">https://doi.org/10.5066/F7TB15V5</a>.
     </p>
-    {{#sections }}
-    {{{ . }}}
-    {{/sections }}
+  </div>
+  
+  <!-- This is where the js files are run. Has to be after the divs are added -->
+  {{#sections }}
+  {{{ . }}}
+  {{/sections }}
+    
 </div>
