remove extraneous words

--- a/layout/templates/key_stories.mustache
+++ b/layout/templates/key_stories.mustache
@@ -6,7 +6,7 @@
   
     <div class="key-story-plot" id="national-pie">
       <p>
-      The U.S. states and territories used over 322 billion gallons per day in 2015. This amount of water is approximately equal to YY (Some percentage of Lake Erie?). We use water in different ways to serve many economically and culturally important needs. The national breakdown of different water uses is as follows:
+      The U.S. states and territories used over 322 billion gallons per day in 2015. This amount of water is approximately equal to YY (Some percentage of Lake Erie?). We use water in different ways to serve many economically and culturally important needs. The national breakdown is as follows:
       </p>
     </div>
   
