--- a/layout/templates/directions_text.mustache
+++ b/layout/templates/directions_text.mustache
@@ -1,7 +1,7 @@
 <div id="fig-caption" class="viz-text">
 
   <p>
-    Interact with the figure by clicking/hovering on the map or categories. Click 
+    Interact with the figure by clicking or hovering on the map and categories. Click 
     the map to zoom in and look more closely at counties.
   </p>
 
