minor text edits

--- a/layout/templates/key_stories.mustache
+++ b/layout/templates/key_stories.mustache
@@ -17,7 +17,7 @@
     </div>
   
     <p>
-      Although thermoelectric and irrigation are the most dominant categories nationally, the county breakdown reveals regional differences in water use distribution. Below is a map that shows all cateogries for each county at one time. While you can still see that irrigation and thermoelectric are the largest, there is a stark contrast between the East, where thermoelectric is dominant, and the West, where irrigation is dominant. See the map below for specific findings:
+      Although thermoelectric and irrigation are the most dominant categories nationally, the county breakdown reveals regional variation. Below is a map that shows all cateogries for each county at one time. While you can still see that irrigation and thermoelectric are the largest, there is a stark contrast between the East, where thermoelectric is dominant, and the West, where irrigation is dominant. See the map below for specific findings:
     </p>
     
     <div class="key-story-plot" id="national-static-pie">
@@ -27,7 +27,7 @@
     </div>
     
     <p>
-      As a result of all these spatial differences in how we use water, total water use differs greatly among states. Can you guess where these three states rank in total water use and use?
+      As a result of all these spatial differences in how we use water, total water use differs greatly among states. Can you guess where these three states rank in total water use?
     </p>
     
     <div class="key-story-plot" id="rank-states-interactive"></div>
