--- a/layout/templates/key_stories.mustache
+++ b/layout/templates/key_stories.mustache
@@ -6,13 +6,13 @@
   
     <div class="key-story-plot" id="national-pie">
       <p>
-      The U.S. states and territories used over 322 billion gallons per day in 2015. This amount of water is approximately equal to filling the Empire State Building over 1000 times per day. We use water in different ways to serve many economically and culturally important needs. The national breakdown is as follows:
+      The U.S. states and territories used over 322 billion gallons per day in 2015. This amount of water is equal to filling the Empire State Building over 1000 times per day. We use water in different ways to serve many economically and culturally important needs. The national breakdown is as follows:
       </p>
     </div>
   
     <div id="fig-caption">
       <p>
-      Domestic, livestock, aquaculture, and mining compose the "other" category and togther make up 5 percent of total withdrawals.
+      Domestic, livestock, aquaculture, and mining compose the "other" category and togther make up approximately 5 percent of total withdrawals.
       </p>
     </div>
   
