connecting mousers. using instructions

--- a/layout/css/map.css
+++ b/layout/css/map.css
@@ -52,6 +52,13 @@
   font-size: 65%;
 }
 
+.rankem-title{
+  text-align: center;
+  fill: rgb(140,140,140);
+  font-size: 150%;
+  font-family: 'Shadows Into Light';
+}
+
 .open-bar-name {
   opacity: 0;
 }
