--- a/layout/templates/wu_story.mustache
+++ b/layout/templates/wu_story.mustache
@@ -21,8 +21,14 @@
     </p>
     
     <div class="key-story-plot" id="national-static-pie">
-      <figure>
+      <figure class="desktopFigure">
        {{{ pie_map_plot }}}
+      </figure>
+      <figure class="mobileFigure">
+        {{{ mobile_left_pie_plot }}}
+      </figure>
+      <figure class="mobileFigure">
+        {{{ mobile_right_pie_plot }}}
       </figure>
     </div>
     
