--- a/layout/templates/wu_story.mustache
+++ b/layout/templates/wu_story.mustache
@@ -3,31 +3,41 @@
   <div id="main-story">
   
     <h3>How do we use water in the U.S.?</h3>
-  
-    <div class="key-story-plot" id="national-pie">
-      <p>
-      The U.S. states and territories used over 322 billion gallons per day in 2015. This amount of water is equal to filling the Empire State Building over 1000 times per day. We use water in different ways to serve many economically and culturally important needs. The national breakdown is as follows:
-      </p>
-    </div>
-  
-    <div id="fig-caption">
-      <p>
-      Domestic, livestock, aquaculture, and mining compose the "other" category and togther make up approximately 5 percent of total withdrawals.
-      </p>
-    </div>
-  
+    
     <p>
+      The U.S. states and territories used over 322 billion gallons per day in 2015. This amount of water is equal to filling the Empire State Building over 1000 times per day. We use water in different ways to serve many economically and culturally important needs. The national breakdown is as follows:
+        </p>
+  
+    <div class="key-story-plot side-by-side">
+    
+    
+      <div class="side-by-side-left">
+         <div class="side-by-side-figure"></div>
+      </div>
+      
+      <div id="national-pie" class="side-by-side-right">
+      
+        <div id="fig-caption" class="pie-caption">
+          <p>
+          Domestic, livestock, aquaculture, and mining compose the "other" category and togther make up approximately 5 percent of total withdrawals.
+          </p>
+        </div>
+      </div>
+      
+  </div>
+  
+   <p>
       Although thermoelectric and irrigation are the most dominant categories nationally, the county breakdown reveals regional variation. Below is a map that shows all cateogries for each county at one time. While you can still see that irrigation and thermoelectric are the largest, there is a stark contrast between the East, where thermoelectric is dominant, and the West, where irrigation is dominant. See the map below for specific findings:
     </p>
     
     <div class="key-story-plot" id="national-static-pie">
-      <figure class="desktopFigure">
+      <figure class="desktop-figure">
        {{{ pie_map_plot }}}
       </figure>
-      <figure class="mobileFigure">
+      <figure class="mobile-figure">
         {{{ mobile_left_pie_plot }}}
       </figure>
-      <figure class="mobileFigure">
+      <figure class="mobile-figure">
         {{{ mobile_right_pie_plot }}}
       </figure>
     </div>
