attempt at better rank fig text labeling

--- a/layout/css/map.css
+++ b/layout/css/map.css
@@ -76,14 +76,16 @@
   cursor: pointer; 
 }
 
-.tooltip {
-	  position: absolute;
-  	padding: 5px 10px;
-  	background-color: white;
-  	border:1px solid rgb(190,190,190);
-  	border-radius: 3px;
-  	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  	line-height:1.5em;
+#rank-state-text,
+#rank-value-text {
+	font-weight: bold;
+	font-size: 20px;
+}
+
+#rank-state-text,
+#rank-value-text,
+#rank-units-text {
+	fill: rgb(70,70,70);
 }
 
 .hidden {
