new secondary svg

--- a/layout/templates/wu_story.mustache
+++ b/layout/templates/wu_story.mustache
@@ -14,7 +14,7 @@
       
       
         <div class="side-by-side-left">
-           <div class="side-by-side-figure"></div>
+           <div class="side-by-side-figure secondary-svg"></div>
         </div>
         
         <div id="national-pie" class="side-by-side-right">
@@ -56,7 +56,7 @@
         As a result of all these spatial differences in how we use water, total water use differs greatly among states. Can you guess where these three states rank in total water use?
       </p>
       
-      <div class="key-story-plot" id="rank-states-interactive"></div>
+      <div class="key-story-plot secondary-svg" id="rank-states-interactive"></div>
   
     </div>
   
