--- a/layout/templates/wu_story.mustache
+++ b/layout/templates/wu_story.mustache
@@ -33,7 +33,7 @@
   <div class="story-two">
   
      <p>
-        Although thermoelectric and irrigation are the most dominant categories nationally, the county breakdown reveals regional variation. Below is a map that shows all cateogries for each county at one time. While you can still see that irrigation and thermoelectric are the largest, there is a stark contrast between the East, where thermoelectric is dominant, and the West, where irrigation is dominant. See the map below for specific findings:
+        Although thermoelectric and irrigation are the most dominant categories nationally, the county breakdown reveals regional variation. Below is a map that shows all categories for each county at one time. While you can still see that irrigation and thermoelectric are the largest, there is a stark contrast between the East, where thermoelectric is dominant, and the West, where irrigation is dominant. See the map below for specific findings:
       </p>
       
       <div class="key-story-plot" id="national-static-pie">
