--- a/layout/templates/wu_story.mustache
+++ b/layout/templates/wu_story.mustache
@@ -7,7 +7,7 @@
       <h3>How do we use water in the U.S.?</h3>
       
       <p>
-        The U.S. states and territories used over 322 billion gallons per day in 2015. This amount of water is equal to filling the Empire State Building over 1000 times per day. We use water in different ways to serve many economically and culturally important needs. The national breakdown is as follows:
+        The U.S. states and territories used over 322 billion gallons per day in 2015. This would cover the continental U.S. in about 2 inches of water over the course of a year. We use water in different ways to serve many economically and culturally important needs. The national breakdown is as follows:
           </p>
     
       <div class="key-story-plot side-by-side">
