grey constrast for 508

--- a/layout/css/map.css
+++ b/layout/css/map.css
@@ -17,7 +17,7 @@
 
 .state {
   fill: transparent;
-  stroke: rgb(180,180,180);
+  stroke: rgb(147,147,147);
   stroke-linejoin: round;
   stroke-linecap: round;
 }
@@ -113,8 +113,8 @@
 }
 
 .watermark {
-  fill: #DCDCDC;
-  stroke: #c6c6c6;
+  fill: #8e8e8e;
+  stroke: #717171;
   stroke-width:0.5;
   opacity: 0.8;
 }
