--- a/layout/css/map.css
+++ b/layout/css/map.css
@@ -1,4 +1,9 @@
 
+svg {
+  /* needed to stop IE from letting zoom show circles everywhere */
+  overflow:hidden;
+}
+
 #map-background {
   fill: transparent;
 }
