in text, use both em dashes

--- a/layout/templates/wu_story.mustache
+++ b/layout/templates/wu_story.mustache
@@ -33,7 +33,7 @@
   </div>
   <div class="story-two">
      <p>
-        Although thermoelectric and irrigation are the dominant categories nationally, the county breakdown reveals regional variation. In the map below, you can see all categories for each county at once. While you can still see that irrigation and thermoelectric are the largest, there is a striking contrast between the East &mdash; where thermoelectric is dominant &mdash; and the West, where irrigation is dominant.
+        Although thermoelectric and irrigation are the dominant categories nationally, the county breakdown reveals regional variation. In the map below, you can see all categories for each county at once. While you can still see that irrigation and thermoelectric are the largest, there is a striking contrast between the East &mdash; where thermoelectric is dominant &mdash; and the West &mdash; where irrigation is dominant.
       </p>
       
       <div class="key-story-plot" id="national-static-pie">
