delete and replace pie fig caption text

--- a/layout/templates/wu_story.mustache
+++ b/layout/templates/wu_story.mustache
@@ -21,15 +21,13 @@
         
           <div id="fig-caption" class="pie-caption">
             <p>
-            Domestic, livestock, aquaculture, and mining compose the "other" category and together make up approximately five percent of total withdrawals.
+            Each "pie slice" represents a portion of U.S. water withdrawals in 2015.
             </p>
           </div>
         </div>
        
     </div>
-   <p>
-      <i>Each "pie slice" represents a portion of U.S. water withdrawals in 2015.</i>
-   </p>
+   
   </div>
   <div class="story-two">
      <p>
