--- a/layout/templates/wu_story.mustache
+++ b/layout/templates/wu_story.mustache
@@ -36,13 +36,7 @@
       
       <div class="key-story-plot" id="national-static-pie">
         <figure class="desktop-figure">
-         {{{ pie_map_plot }}}
-        </figure>
-        <figure class="mobile-figure">
-          {{{ mobile_left_pie_plot }}}
-        </figure>
-        <figure class="mobile-figure">
-          {{{ mobile_right_pie_plot }}}
+         {{{ placeholder }}}
         </figure>
       </div>
     
