--- a/layout/templates/wu_story.mustache
+++ b/layout/templates/wu_story.mustache
@@ -35,8 +35,12 @@
       </p>
       
       <div class="key-story-plot" id="national-static-pie">
-        <figure class="desktop-figure">
-         {{{ placeholder }}}
+        <figure id="test" class="desktop-figure">
+          <picture>
+            <source class="lazy" srcset="images/placeHolder.gif" data-src="images/WU_stories_static.jpg" media="(min-width:600px)"/>
+            <source class="lazy" srcset="images/placeHolder.gif" data-src="images/WU_stories_static_mobile.jpg" media="(max-width:599px)"/>
+            {{{ placeholder }}}
+          </picture>
         </figure>
       </div>
     
