--- a/layout/templates/wu_story.mustache
+++ b/layout/templates/wu_story.mustache
@@ -35,7 +35,7 @@
       </p>
       
       <div class="key-story-plot" id="national-static-pie">
-        <figure id="test" class="desktop-figure">
+        <figure class="desktop-figure">
           <picture>
             <source class="lazy" srcset="images/placeHolder.gif" data-src="images/WU_stories_static.jpg" media="(min-width:600px)"/>
             <source class="lazy" srcset="images/placeHolder.gif" data-src="images/WU_stories_static_mobile.jpg" media="(max-width:599px)"/>
