Read More and Hide

--- a/layout/templates/wu_story.mustache
+++ b/layout/templates/wu_story.mustache
@@ -70,7 +70,7 @@
           </p>
         </div>
         
-        <p id="national-static-pie-mobile-interact" class="readMore"><strong>Expand to read more</strong></p>
+        <p id="national-static-pie-mobile-interact" class="readMore"><strong>Read More</strong></p>
       
     </div>
   </div>
