--- a/layout/templates/wu_story.mustache
+++ b/layout/templates/wu_story.mustache
@@ -56,7 +56,10 @@
             <strong>3.</strong> Larger withdrawals in Alaska in the “other” categories are for <strong>aquaculture and mining.</strong>
           </p>
           <p>
-            <strong>4. Irrigation</strong> occurs in most areas of the country, but is larger in areas where rainfall is insufficient to meet crop what needs, such as in the <strong>drier parts of the West</strong>. Irrigation in <strong>eastern Arkansas</strong> provides water to flood rice fields as well as supplement rainfall to other crops.
+            <strong>4a. Irrigation</strong> occurs in most areas of the country, but is larger in areas where rainfall is insufficient to meet crop what needs, such as in the <strong>drier parts of the West</strong>. 
+          </p>
+          <p>
+            <strong>4b.</strong> Irrigation in <strong>eastern Arkansas</strong> provides water to flood rice fields as well as supplement rainfall to other crops.
           </p>
           <p>
             <strong>5. Industrial withdrawals</strong> are driven by many factors. Industrial  facilities for production of steel in Lake County, Indiana, are located on Lake Michigan, a large source of fresh water, with access to water and land transportation, and ore and coal deposits. Lake County accounts for 8% of the US industrial water withdrawals.
