i broke hurricane_marie; this fixes it

--- a/layout/templates/footer.mustache
+++ b/layout/templates/footer.mustache
@@ -45,7 +45,7 @@
         		<div class="related-item">
         		  <a href="https://owi.usgs.gov/vizlab/hurricane-maria/" target="_blank" onclick="gtag('event','outbound', 'clicked on related vizzy')">
         		    <div class="footerThumbnail">
-        		    	<img class="lazy" src="images/placeholder.gif" data-src="images/hurricane_marie.png" alt="hurricane maria viz thumb"/>
+        		    	<img class="lazy" src="images/placeholder.gif" data-src="images/hurricane_maria.png" alt="hurricane maria viz thumb"/>
         				</div>
         			  <div class="titleHandler">
         				  <a href="https://owi.usgs.gov/vizlab/hurricane-maria/" class="related-items-caption">Visualizing Hurricane Maria
