--- a/layout/templates/map_section.mustache
+++ b/layout/templates/map_section.mustache
@@ -1,8 +1,8 @@
 <div class="main-svg">
 </div>
 
-<div id="fig-caption" class="viz-text">
-  <p>[Caption goes here]</p>
+<div id="map-caption" class="caption full-width">
+  <p></p>
 </div>
 
 {{{ map_script }}}
