--- a/layout/templates/wu_story.mustache
+++ b/layout/templates/wu_story.mustache
@@ -1,8 +1,10 @@
-<div id="wu-story" class="viz-text">
+<div id="wu-story">
 
   <div id="main-story">
   
   <div class="story-one">
+  
+    <div class="key-story-text viz-text">
   
       <h3>How do we use water in the U.S.?</h3>
       
@@ -10,8 +12,9 @@
         We all depend on water every day, ranging from the water from our faucets, to the food we eat, to much of the electricity we use. The U.S. and its territories used nearly 322 billion gallons of water per day in 2015. This would cover the continental U.S. in about two inches of water over the course of a year. The national breakdown of water withdrawals looks like this:
           </p>
     
+    </div>
+    
       <div class="key-story-plot side-by-side">
-      
       
         <div class="side-by-side-left">
            <div class="side-by-side-figure secondary-svg"></div>
@@ -19,7 +22,7 @@
         
         <div id="national-pie" class="side-by-side-right">
         
-          <div id="fig-caption" class="pie-caption">
+          <div id="pie-caption" class="caption">
             <p>
             Each "pie slice" represents a portion of U.S. water withdrawals in 2015.
             </p>
@@ -30,12 +33,15 @@
    
   </div>
   <div class="story-two">
+
+    <div class="key-story-text viz-text">
      <p>
         Although thermoelectric and irrigation are the dominant categories nationally, the county breakdown reveals regional variation. In the map below, you can see all categories for each county at once. While you can still see that irrigation and thermoelectric are the largest, there is a striking contrast between the East &mdash; where thermoelectric is dominant &mdash; and the West &mdash; where irrigation is dominant.
       </p>
+    </div>
       
       <div class="key-story-plot" id="national-static-pie">
-        <figure class="desktop-figure">
+        <figure>
           <picture>
             <source class="lazy" srcset="images/placeholder.gif" data-src="images/WU_stories_static.jpg" media="(min-width:600px)"/>
             <source class="lazy" srcset="images/placeholder.gif" data-src="images/WU_stories_static_mobile.jpg" media="(max-width:599px)"/>
@@ -44,7 +50,7 @@
         </figure>
       </div>
       
-      <div id="national-static-pie-mobile-container">
+      <div id="national-static-pie-mobile-container" class="key-story-text viz-text">
         <div id="national-static-pie-mobile-content">
           <p>
           <strong>1. Public Supply</strong> water withdrawals, mostly for Domestic use, are highest in counties with large numbers of people.
@@ -80,9 +86,11 @@
   
   <div class="story-three">
     
+    <div class="key-story-text viz-text">
       <p>
         As a result of all these spatial differences in how we use water, total water use differs greatly among states. Can you guess where these three states rank in total water use?
       </p>
+    </div>
       
       <div class="key-story-plot secondary-svg" id="rank-states-interactive"></div>
   
@@ -90,7 +98,7 @@
   
   </div>
   
-  <div class="extras">
+  <div class="extras full-width">
     <div id="data-collection">
       <h4>Data Collection</h4>
    
