resolve 508 errors for form item labels/titles

--- a/layout/templates/mobileMapUI.mustache
+++ b/layout/templates/mobileMapUI.mustache
@@ -4,7 +4,7 @@
       <div class="drop-down-indicator">
         {{{selectArrows}}}
       </div>
-      <select class="view-select">
+      <select title="Select a state" class="view-select">
         <option value="USA">United States</option>
       </select>
     </div>
@@ -12,7 +12,7 @@
       <div class="drop-down-indicator">
         {{{selectArrows}}}
       </div>
-      <select class="county-select">
+      <select title="Select a county" class="county-select">
         <option value="Select County">--Select County--</option>
       </select>
     </div>
