resolve two 508 href text errors

--- a/layout/templates/footer.mustache
+++ b/layout/templates/footer.mustache
@@ -32,26 +32,24 @@
         <p class="related-items-title">Related Visualizations:</p>
         <div class="related-items-container">
         		<div class="related-item">
-        		  <a href="https://owi.usgs.gov/vizlab/water-use/" target="_blank" onclick="gtag('event','outbound', 'clicked on related vizzy')">
-        		    <div class="footerThumbnail">
+      		    <div class="footerThumbnail">
+          		  <a href="https://owi.usgs.gov/vizlab/water-use/" target="_blank" onclick="gtag('event','outbound', 'clicked on related vizzy')">
         					<img class="lazy" src="images/placeholder.gif" data-src="images/water_use_thumb.png" alt="Water use viz thumb"/>
-        				</div>
+          			</a>
         			  <div class="titleHandler">
-        				  <a href="https://owi.usgs.gov/vizlab/water-use/" class="related-items-caption">Visualizing water  use by region and time
-                  </a>
+        				  <a href="https://owi.usgs.gov/vizlab/water-use/" class="related-items-caption">Visualizing water use by region and time</a>
         				</div>
-        			</a>
+      				</div>
         		</div>
         		<div class="related-item">
-        		  <a href="https://owi.usgs.gov/vizlab/hurricane-maria/" target="_blank" onclick="gtag('event','outbound', 'clicked on related vizzy')">
-        		    <div class="footerThumbnail">
+      		    <div class="footerThumbnail">
+          		  <a href="https://owi.usgs.gov/vizlab/hurricane-maria/" target="_blank" onclick="gtag('event','outbound', 'clicked on related vizzy')">
         		    	<img class="lazy" src="images/placeholder.gif" data-src="images/hurricane_maria.png" alt="hurricane maria viz thumb"/>
-        				</div>
+                </a>
         			  <div class="titleHandler">
-        				  <a href="https://owi.usgs.gov/vizlab/hurricane-maria/" class="related-items-caption">Visualizing Hurricane Maria
-                  </a>
+        				  <a href="https://owi.usgs.gov/vizlab/hurricane-maria/" class="related-items-caption">Visualizing Hurricane Maria</a>
         				</div>
-        			</a>
+      				</div>
         		</div>
       	</div>
       </div>
