--- a/layout/templates/wu_story.mustache
+++ b/layout/templates/wu_story.mustache
@@ -98,7 +98,7 @@
   
   </div>
   
-  <div class="extras full-width">
+  <div id="extras" class="full-width viz-text">
     <div id="data-collection">
       <h3>Data Collection</h3>
    
