--- a/layout/templates/wu_story.mustache
+++ b/layout/templates/wu_story.mustache
@@ -59,7 +59,7 @@
             <strong>2. Aquaculture, mining, self-supplied domestic, and livestock</strong> water uses are distributed unevenly across the US. There are large withdrawals for aquaculture along the Snake River in southern Idaho.
           </p>
           <p>
-            <strong>3.</strong> Larger withdrawals in Alaska in the &#8220other&#8221 categories are for <strong>aquaculture and mining.</strong>
+            <strong>3.</strong> Larger withdrawals in Alaska in the &#8220;other&#8221; categories are for <strong>aquaculture and mining.</strong>
           </p>
           <p>
             <strong>4a. Irrigation</strong> occurs in most areas of the country, but is larger in areas where rainfall is insufficient to meet crop what needs, such as in the <strong>drier parts of the West</strong>. 
